--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Tagihan PLN</string>
     <string name="action_settings">Settings</string>
+    <string name="check_tagihan">Check Tagihan</string>
+    <string name="hint_id_pelanggan">ID Pelanggan</string>
 </resources>
